[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celery-orchestrator"
version = "0.2.1"
description = "Celery orchestrator REST API + workers + Flower"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4,<6",
    "flower>=2.0,<3",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "redis>=5.0,<6",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "fakeredis[lua]>=2.23,<3",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "respx>=0.21,<1",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/celery_orchestrator/api/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
