[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celery-orchestrator"
version = "2.2.3"
description = "Celery orchestration service (FastAPI + worker + Flower + Beat)"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.3,<6",
    "fastapi>=0.115,<1",
    "flower>=2.0,<3",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.6,<3",
    "redis>=5.0,<6",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "fakeredis[lua]>=2.23,<3",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "respx>=0.21,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=celery_orchestrator --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
branch = true
source = ["celery_orchestrator"]
omit = ["*/tests/*"]
